# diploma

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  benchmark_helpers.cpp  benchmark_helpers.h  benchmarks.cpp  clang-format.txt  clang16.toolchain  exceptions.cpp  exceptions.h  helpers.cpp  helpers.h  json_benchmarks.cpp  json_validators_llvm.cpp  json_validators_llvm.h  jsoncons_cursor_validator.cpp  jsoncons_cursor_validator.h  main.cpp  table_schema.cpp  table_schema.h  test_validators.cpp  validators.cpp  validators.h  validators_jsoncons.cpp  validators_jsoncons.h  validators_llvm.cpp  validators_llvm.h  validators_llvm.ll  yson_cursor_validator.cpp  yson_cursor_validator.h  yson_validators_llvm.cpp  yson_validators_llvm.h  yt_yson_validator.cpp  yt_yson_validator.h
llvm-ir-helpers/: event_getter.cpp  event_getter.ll  llvm_jsoncons_helpers.cpp  llvm_jsoncons_helpers.ll  llvm_yson_helpers.cpp  llvm_yson_helpers.ll  llvm_yson_helpers_with_cursor.cpp
